--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
 }
 a{
   text-decoration: none;
-  color: #FF6699;//#c3c3c3;
+  color: #b3598c; #FF6699;//#c3c3c3;
   margin: 0;
 }
 a:hover{
@@ -26,4 +26,11 @@ h4{
   height: 12px;
   width: 100%;
   color: #684e5b;
+}
+.container{
+  margin: 5px;
+}
+.quote{
+
+  margin-left: 350px;
 }
