--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,14 @@
   padding: 0;
 }
 body{
-  background: black; //#0f0f0f;
+  background: black; #0f0f0f;
   opasity: 0.39;
   font-size: 10px;
   color: ghostwhite;
 }
 a{
   text-decoration: none;
-  color: #b3598c; #FF6699;//#c3c3c3;
+  color: #965f92; #a13f83; #79357a; #b3598c; #FF6699; #c3c3c3;
   margin: 0;
 }
 a:hover{
@@ -22,15 +22,15 @@ p{
 h4{
   text-align: center;
 }
-#header{
-  height: 12px;
+#hdr{
+  height: 15px;
   width: 100%;
   color: #684e5b;
 }
 .container{
-  margin: 5px;
+  margin: 9px;
 }
 .quote{
 
-  margin-left: 350px;
+  margin-left: 299px;
 }
