--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   padding: 0;
 }
 body{
+  -webkit-text-size-adjust: 100%;
   background: black; #0f0f0f;
   opasity: 0.39;
   font-size: 10px;
@@ -26,13 +27,45 @@ h4{
   height: 15px;
   width: 100%;
   color: #684e5b;
+  background-color: #000;
 }
 .container{
   margin: 9px;
+  /* width: 209px; */
 }
 .quote{
   margin-left: 159px;
 }
 .content{
   margin: 89px 0;
+}
+
+.controls{
+  margin-top: 10px;
+}
+.controls a{
+  margin: 0 10px 0 2px;
+  -webkit-animation-name: blinking_controls;
+  -webkit-animation-duration: 3s;
+  -webkit-animation-iteration-count: infinite;
+}
+@-webkit-keyframes blinking_controls {
+  0% {opacity: 0}
+  50% {opacity: 1}
+  100% {opacity: 0}
+}
+.i_menu {
+    position: fixed;
+    top: 0;
+    background :rgba(0, 0, 0, 0.8);
+    width: 122px;
+    height: 100%;
+    /* color: black;
+    text-align: center; */
+    -webkit-transform: translateX(-100%);
+    -webkit-transition: -webkit-transform 500ms ease-out;
+    z-index: 99;
+}
+.open {
+  -webkit-transform: translateX(0);
 }
